--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,8 +10,8 @@ security:
                 class: App\Entity\User
                 property: email
     role_hierarchy:
-        ROLE_ADMIN: ROLE_MOD
-        ROLE_MOD: ROLE_USER
+        ROLE_ADMIN: ROLE_MODERATOR
+        ROLE_MODERATOR: ROLE_USER
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
